--- a/client/css/main.css
+++ b/client/css/main.css
@@ -293,6 +293,9 @@ nav a:focus {
     height: 19px !important;
 }
 
+.table-asiento tbody:nth-child(even) { background: #f5f5f5;  border: solid 1px #ddd; pointer-events: none}
+.table-asiento tbody:nth-child(odd) { background: #e5e5e5;  border: solid 1px #ddd; pointer-events: none}
+
 /****************************************** END BODY *************************************************/
 
 /****************************************** START FOOTER *************************************************/
